--- a/lesson3/lesson3.css
+++ b/lesson3/lesson3.css
@@ -1,6 +1,6 @@
 body {
     background-color: #fff;
-    background: url("../images/travelworthy-backdrop.jpg") no-repeat center center fixed;
+    background: url("/image/travelworthy-backdrop.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -9,7 +9,7 @@ body {
     font-family: 'Open Sans', sans-serif;}
   
   h1 {
-    background: #1e1b1e url("../images/travelworthy-logo.gif") no-repeat;
+    background: #1e1b1e url("/image/travelworthy-logo.gif") no-repeat;
     width: 230px;
     height: 180px;
     float: left;
@@ -85,7 +85,7 @@ body {
     padding: 0 50px 0 50px;
     line-height: 28px;
     text-align: left;
-    background-image: url("../images/check-cross.png");
+    background-image: url("/image/tick-cross.png");
     background-position: 120px 0;
     background-repeat: no-repeat;}
   .false {
